# EChat

./: CMakeLists.txt  main.cpp
src/Testing/: ServerConnectionTest.cpp  ServerConnectionTest.h
src/classes/client/: AccountInfo.cpp  AccountInfo.h  ChatRoomInfo.cpp  ChatRoomInfo.h  ClientInfo.cpp  ClientInfo.h
src/classes/general/: ClientResponse.cpp  ClientResponse.h  Constants.h  Enums.h
src/classes/server/: Account.cpp  Account.h  ChatRoom.cpp  ChatRoom.h  Client.cpp  Client.h  Server.cpp  Server.h
src/front/IO/: ServerConnection.cpp  ServerConnection.h
src/front/terminal/: InstructionInterperter.cpp  InstructionInterperter.h  TerminalUserInterface.cpp  TerminalUserInterface.h
